[metadata]
name = dowsing
description = Guess metadata from sdist without running
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/python-packaging/dowsing/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages =
    dowsing
    dowsing.setuptools
    dowsing.tests
setup_requires =
    setuptools_scm
    setuptools >= 38.3.0
python_requires = >=3.7
install_requires =
    highlighter>=0.1.1
    imperfect>=0.1.0
    LibCST>=0.3.7
    tomlkit>=0.2.0
    pkginfo>=1.4.2
    setuptools >= 38.3.0

[options.extras_require]
dev =
    black==24.10.0
    click==8.1.7
    flake8==7.1.1
    mypy==1.13.0
    tox==4.23.2
    twine==6.0.1
    ufmt==2.8.0
    usort==1.0.8.post1
    wheel==0.45.1
    honesty==0.3.0b1
test =
    coverage >= 6
    volatile==2.1.0

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = dowsing/*
omit = dowsing/tests/*

[coverage:report]
fail_under = 70
precision = 1
show_missing = True
skip_covered = True

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[mypy]
ignore_missing_imports = True
python_version = 3.8
strict = True

[tox:tox]
envlist = py{38,39,310,311,312,313}-tests

[testenv]
deps = .[test]
allowlist_externals = make
commands =
    make test
setenv =
    tests: COVERAGE_FILE={envdir}/.coverage

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88

[options.package_data]
dowsing =
  py.typed
